More dark mode fixes

--- a/src/global-styles/custom.scss
+++ b/src/global-styles/custom.scss
@@ -94,6 +94,10 @@ body {
       ) !important;
     }
   }
+
+  .modal-content {
+    background: #2a3244 !important;
+  }
 }
 
 :root {
